# dhlab-app-corpus

./: Dockerfile  README.md  corpus.py  corpus_old.py  distinct_languages.csv  pyproject.toml  requirements.txt
app/: app.py  language_codes.csv
tests/: marc_lang_codes.html  process_langs.py  test_corpus.py
