[tool.poetry]
name = "dhlab-app-corpus"
version = "1.1.1"
description = "Dh-lab corpus streamlit app"
authors = ["DH-lab <dhlab@nb.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
streamlit = "^1.38.0"
dhlab = "^2.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
